<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Profile">

    <include layout="@layout/header_back" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_name"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costumer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textWebEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_number"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costumer_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_email"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costumer_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textWebEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_businessName"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costumer_BusinessName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textWebEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_State"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <AutoCompleteTextView
                    android:id="@+id/Costumer_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_City"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <AutoCompleteTextView
                    android:id="@+id/Customer_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_locality"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costumer_localityArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textWebEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/Costumer_address"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costumer_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textWebEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Shop Banner"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:src="@drawable/ic_image" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"

                    android:src="@drawable/ic_image" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"

                    android:src="@drawable/ic_image" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ProfileSubmit_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/poppins_semibold"
                android:text="Submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>