<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddService">

    <include layout="@layout/header_back" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/addService_category"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <AutoCompleteTextView
                    android:id="@+id/addService_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/addService_serviceName"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addService_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/addService_serviceDes"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addService_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="textWebEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/addService_price"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addService_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/addService_status"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue">

                <AutoCompleteTextView
                    android:id="@+id/addService_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Service Image"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_image" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/AddServiceSubmit_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/poppins_semibold"
                android:text="Submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>